--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -15,7 +15,7 @@
 			>
 				<img
 					class="mt-10 animate-spin"
-					src="./The-waris-mandala.png"
+					src="./images/the-waris-mandala.png"
 					alt="The Waris"
 					width="600"
 					height="600"
