Fix font, colors and responsive view

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer
-    class="main-footer-section bg-black text-center py-10 border-t border-gray-800"
+    class="main-footer-section bg-black text-center text-xl text-[#e6dfd0] py-10 border-t border-gray-800"
 >
     The Waris &copy {new Date().getFullYear()}
     <br /> Todos los derechos reservados
