--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,8 @@
 <header
-    class="main-header fixed top-0 left-0 w-full z-50 bg-black/80 backdrop-blur-md"
+    class="main-header bg-transparent md:fixed top-0 left-0 w-full z-50"
 >
     <nav
-        class="main-nav flex justify-between items-center px-8 py-4 max-w-8xl mx-auto"
+        class="main-nav flex flex-col md:flex-row justify-between items-center px-8 py-4 max-w-8xl mx-auto"
     >
         <div class="flex flex-row gap-3">
             <a
@@ -120,16 +120,16 @@
                 >
             </a>
         </div>
-        <ul class="text-x1 md:text-2xl nav-links flex gap-8">
+        <ul class="text-[20px] md:text-2xl nav-links flex gap-8 pt-5">
             <li>
-                <a href="#music" class="hover:text-accent transition">MÚSICA</a>
+                <a href="#music" class="text-[#e6dfd0] font-bold hover:text-accent transition">MÚSICA</a>
             </li>
             <li>
-                <a href="#videos" class="hover:text-accent transition">VIDEOS</a
+                <a href="#videos" class="text-[#e6dfd0] font-bold hover:text-accent transition">VIDEOS</a
                 >
             </li>
             <li>
-                <a href="#social" class="hover:text-accent transition">CONCIERTOS</a
+                <a href="#social" class="text-[#e6dfd0] font-bold hover:text-accent transition">CONCIERTOS</a
                 >
             </li>
         </ul>
