--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import "@styles/global.css";
 		<meta name="theme-color" content="#000000" />
 		<link rel="icon" href="/favicon.svg" />
 	</head>
-	<body class="font-sans bg-black text-white min-h-screen flex flex-col" style="font-family: 'Lato', sans-serif;">
+	<body class="font-anaktoria bg-black text-white flex flex-col">
 		<slot />
 	</body>
 </html>
