fix deploy errors

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -11,7 +11,7 @@
 			>
 				<img
 					class="animate-spin"
-					src="./images/the-waris-mandala.png"
+					src="/images/the-waris-mandala.png"
 					alt="The Waris"
 					width="600"
 					height="600"
