--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,14 +6,14 @@ import "@styles/global.css";
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>The Waris - Rock Band</title>
+		<title>The Waris</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Anton&family=Lato:wght@400;700&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 		<meta name="description" content="The Waris - Rock from the heart of Ayacucho. Listen to our latest album, watch videos, and follow us on social media." />
 		<meta name="theme-color" content="#000000" />
-		<link rel="icon" href="/favicon.svg" />
+		<link rel="icon" href="/images/the-waris-logo.png" />
 	</head>
 	<body class="font-anaktoria bg-black text-white flex flex-col">
 		<slot />
