--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: 'Anaktoria';
-    src: url('/web-page/fonts/anaktoria.woff2') format('woff2');
+    src: url('/fonts/anaktoria.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
