Change youtube video

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -2,13 +2,12 @@
 	<!-- Hero Section -->
 	<section
 		id="hero"
-		class="hero-section relative flex items-center justify-center md:min-h-screen text-center content-section">
+		class="hero-section relative flex items-center justify-center md:min-h-screen text-center content-section"
+	>
 		<div
 			class="hero-content relative z-10 flex flex-col items-center justify-center w-full"
 		>
-			<h1
-				class="font-anaktoria text-4xl md:text-6xl font-bold md:mt-10"
-			>
+			<h1 class="font-anaktoria text-4xl md:text-6xl font-bold md:mt-10">
 				<img
 					class="animate-spin"
 					src="/images/the-waris-mandala.png"
@@ -24,7 +23,7 @@
 			>
 				La Cosecha De Las Malas Siembras
 			</a>
-			<div class="flex flex-col justify-center items-center  md:flex-row">
+			<div class="flex flex-col justify-center items-center md:flex-row">
 				<a
 					class="md:x-3 mx-1.5 text-[#e6dfd0] hover:text-accent"
 					href="https://open.spotify.com/intl-es/album/20fCxibOkmz9GHdwtojl3H?si=6BjVEWQzRgqdvJTwNusEOQ"
@@ -186,15 +185,13 @@
 		>
 			Videos
 		</h2>
-		<div
-			class="video-container relative w-full pb-[56.25%]"
-		>
+		<div class="video-container relative w-full pb-[56.25%]">
 			<iframe
 				class="absolute top-0 left-0 w-full h-full"
 				width="auto"
 				height="auto"
-				src="https://www.youtube.com/embed/P48t5L6numk?list=PL3e5fr7NC9VxShEkRfzZPF2ZX5gWxCKyA"
-				title="The Waris - Desenlace (Video Oficial)"
+				src="https://www.youtube.com/embed/AP_Olx-OD7w?si=jErs6ldZQXc4IQrk"
+				title="The Waris - La Cosecha de las Malas Siembras (En Vivo)"
 				frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				referrerpolicy="strict-origin-when-cross-origin"
